atualização do sobre e experiência

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
               </p>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">75%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
               </div>
               <p>Javascript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
               </div>
               <p>Spring Boot</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">60%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
               </div>
               <p>Angular</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">65%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:65%">65%</div>
               </div>
               <br>
   
@@ -86,7 +86,8 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p>Graduado no curso superior de tecnologia em automação industrial, onde trabalhei com eletrônica, principalmente no setor de montagem e produção de placas eletrônicas. 
+              Graduado no curso técnico de design gráfico e cursando pós-graduação em desenvolvimento Full Stack na área de TI (foco em Java e Spring Boot para back-end, e Javascript, HTML, CSS e Angular para front-end, além de Flutter para aplicativos mobile e Github, Docker, Cloud Computing), mas no momento sem experiência profissional na área.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -94,15 +95,10 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>TRON Controles Elétricos LTDA</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2017 - <span class="w3-tag w3-teal w3-round">Julho 2018</span></h6>
+              <p>Montagem e produção de placas eletrônicas, além da programação e manipulação de máquina CNC.</p>
               <hr>
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
             </div>
           </div>
   
