--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
             <p>Graduado no curso superior de tecnologia em automação industrial, onde trabalhei com eletrônica, principalmente no setor de montagem e produção de placas eletrônicas. 
-              Graduado no curso técnico de design gráfico e cursando pós-graduação em desenvolvimento Full Stack na área de TI (foco em Java e Spring Boot para back-end, e Javascript, HTML, CSS e Angular para front-end, além de Flutter para aplicativos mobile e Github, Docker, Cloud Computing), mas no momento sem experiência profissional na área.</p>
+              Graduado no curso técnico de design gráfico e cursando pós-graduação em desenvolvimento Full Stack na área de TI, mas no momento sem experiência profissional na área.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -115,16 +115,27 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="" target="_blank">Formação (andamento): Potência Tech Angular Developer - Powered by iFood</a></li>
+                <li><a href="https://www.dio.me/certificate/C885BC2D/share" target="_blank">Projeto: Construindo uma Pokédex com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/EACE56BE/share" target="_blank">Curso: Introdução ao Desenvolvimento Web com JavaScript
+                </a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Faculdade VINCIT</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2022 - ATUAL</h6>
+              <p> Pós-graduação Lato Sensu no curso de Full Stack Java Developer, com foco em Java e Spring Boot para back-end, e Javascript, HTML, CSS e Angular para front-end, além de Flutter para aplicativos mobile e conhecimento em Github, Docker, Cloud Computing entre outros</p>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Faculdade de Tecnologia SENAI</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2015 - Janeiro 2019</h6>
+              <p>Curso Superior de Tecnologia em Automação Industrial com foco em eletrônica, programação, robótica entre outros</p>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Unibratec</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2007 - Dezembro 2009</h6>
+              <p>Curso Técnico em Design Gráfico com foco em websites</p>
             </div>
           </div>
 
