--- a/index.html
+++ b/index.html
@@ -146,18 +146,18 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/Pitonico/js-developer-pokedex" target="_blank">Pitonico/js-developer-pokedex</a>
               </h6>
-              <p>TODO</p>
+              <p>Desafio de Projeto DIO front-end utilizando HTML, CSS e javascript puro, com a criação de uma pokédex com informações detalhadas sobre os pokémons</p>
               <hr>
             </div>
-            <div class="w3-container">
+            <!-- <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
+                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/PROJETO</a>
               </h6>
               <p>TODO</p>
-            </div>
+            </div> -->
           </div>
   
           <!-- End Right Column -->
@@ -171,11 +171,11 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+      <a href="https://github.com/Pitonico" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/diogo-barbosa-2b240020a/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <!-- <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
       <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a> -->
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
