--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="pt-BR">
 
   <head>
-    <title>NOME_COMPLETO</title>
+    <title>Diogo Gosson Barbosa</title>
     
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -115,7 +115,7 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="" target="_blank">Formação (andamento): Potência Tech Angular Developer - Powered by iFood</a></li>
+                <li><a href="" target="_blank">Formação (em andamento): Potência Tech Angular Developer - Powered by iFood</a></li>
                 <li><a href="https://www.dio.me/certificate/C885BC2D/share" target="_blank">Projeto: Construindo uma Pokédex com JavaScript</a></li>
                 <li><a href="https://www.dio.me/certificate/EACE56BE/share" target="_blank">Curso: Introdução ao Desenvolvimento Web com JavaScript
                 </a></li>
