mudança nas cores em geral

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
   </head>
 
-  <body class="w3-light-grey" cz-shortcut-listen="true">
+  <body class="w3-black" cz-shortcut-listen="true">
   
     <!-- Page Container -->
     <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -30,49 +30,49 @@
         <!-- Left Column -->
         <div class="w3-third">
   
-          <div class="w3-white w3-text-grey w3-card-4">
+          <div class="w3-black w3-text-white w3-card-4">
             <!-- @falvojr: This container has been modified to not use a profile picture. -->
-            <div class="w3-container">
+            <div class="w3-container w3-text-orange">
               <h2>Diogo Gosson Barbosa</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Estudante de pós-graduação em programação na área de TI</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Recife-PE, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>diogba@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(81) 998122222</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-deep-orange"></i>Estudante de pós-graduação em programação na área de TI</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-deep-orange"></i>Recife-PE, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-deep-orange"></i>diogba@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-deep-orange"></i>(81) 998122222</p>
               <hr>
   
-              <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+              <p class="w3-large w3-text-orange">
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-deep-orange"></i>Skills</b>
               </p>
               <p>Java</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
+              <div class="w3-white w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-deep-orange" style="width:75%">75%</div>
               </div>
               <p>Javascript</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
+              <div class="w3-white w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-deep-orange" style="width:70%">70%</div>
               </div>
               <p>Spring Boot</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+              <div class="w3-white w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-deep-orange" style="width:60%">60%</div>
               </div>
               <p>Angular</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:65%">65%</div>
+              <div class="w3-white w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-deep-orange" style="width:65%">65%</div>
               </div>
               <br>
   
-              <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+              <p class="w3-large w3-text-orange">
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-deep-orange"></i>Idiomas</b>
               </p>
               <p>Português</p>
-              <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+              <div class="w3-white w3-round-xlarge">
+                <div class="w3-round-xlarge w3-deep-orange" style="height:24px;width:100%"></div>
               </div>
               <p>Inglês</p>
-              <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+              <div class="w3-white w3-round-xlarge">
+                <div class="w3-round-xlarge w3-deep-orange" style="height:24px;width:50%"></div>
               </div>
               <br>
             </div>
@@ -84,31 +84,31 @@
         <!-- Right Column -->
         <div class="w3-twothird">
     
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
+          <div class="w3-container w3-card w3-black w3-margin-bottom">
+            <h2 class="w3-text-orange w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-deep-orange"></i>Sobre</h2>
             <p>Graduado no curso superior de tecnologia em automação industrial, onde trabalhei com eletrônica, principalmente no setor de montagem e produção de placas eletrônicas. 
               Graduado no curso técnico de design gráfico e cursando pós-graduação em desenvolvimento Full Stack na área de TI, mas no momento sem experiência profissional na área.</p>
           </div>
 
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
+          <div class="w3-container w3-card w3-black w3-margin-bottom">
+            <h2 class="w3-text-orange w3-padding-16">
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-deep-orange"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TRON Controles Elétricos LTDA</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2017 - <span class="w3-tag w3-teal w3-round">Julho 2018</span></h6>
+              <h5 class="w3-text-orange"><b>TRON Controles Elétricos LTDA</b></h5>
+              <h6 class="w3-text-deep-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2017 - <span class="w3-tag w3-deep-orange w3-text-white w3-round">Julho 2018</span></h6>
               <p>Montagem e produção de placas eletrônicas, além da programação e manipulação de máquina CNC.</p>
               <hr>
             </div>
           </div>
   
-          <div class="w3-container w3-card w3-white">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+          <div class="w3-container w3-card w3-black w3-margin-bottom">
+            <h2 class="w3-text-orange w3-padding-16">
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-deep-orange"></i>Educação
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h5 class="w3-text-orange"><b>Digital Innovation One (DIO)</b></h5>
+              <h6 class="w3-text-white"><i class="fa fa-calendar fa-fw w3-margin-right w3-text-deep-orange"></i><span class="w3-tag w3-deep-orange w3-text-white w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -123,28 +123,28 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Faculdade VINCIT</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2022 - ATUAL</h6>
+              <h5 class="w3-text-orange"><b>Faculdade VINCIT</b></h5>
+              <h6 class="w3-text-deep-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2022 - <span class="w3-tag w3-deep-orange w3-text-white w3-round">ATUAL</span></h6>
               <p> Pós-graduação Lato Sensu no curso de Full Stack Java Developer, com foco em Java e Spring Boot para back-end, e Javascript, HTML, CSS e Angular para front-end, além de Flutter para aplicativos mobile e conhecimento em Github, Docker, Cloud Computing entre outros</p>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Faculdade de Tecnologia SENAI</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2015 - Janeiro 2019</h6>
+              <h5 class="w3-text-orange"><b>Faculdade de Tecnologia SENAI</b></h5>
+              <h6 class="w3-text-deep-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2015 - <span class="w3-tag w3-deep-orange w3-text-white w3-round">Janeiro 2019</span></h6>
               <p>Curso Superior de Tecnologia em Automação Industrial com foco em eletrônica, programação, robótica entre outros</p>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Unibratec</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2007 - Dezembro 2009</h6>
+              <h5 class="w3-text-orange"><b>Unibratec</b></h5>
+              <h6 class="w3-text-deep-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2007 - <span class="w3-tag w3-deep-orange w3-text-white w3-round">Dezembro 2009</span></h6>
               <p>Curso Técnico em Design Gráfico com foco em websites</p>
             </div>
           </div>
 
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+          <div class="w3-container w3-card w3-black w3-margin-bottom">
+            <h2 class="w3-text-orange w3-padding-16">
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-deep-orange"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-deep-orange">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/Pitonico/js-developer-pokedex" target="_blank">Pitonico/js-developer-pokedex</a>
               </h6>
@@ -152,7 +152,7 @@
               <hr>
             </div>
             <!-- <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-white">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
                 <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/PROJETO</a>
               </h6>
@@ -169,7 +169,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-deep-orange w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/Pitonico" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/diogo-barbosa-2b240020a/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
