--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
   </head>
 
-  <body class="w3-black" cz-shortcut-listen="true">
+  <body class="w3-dark-gray" cz-shortcut-listen="true">
   
     <!-- Page Container -->
     <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -102,7 +102,7 @@
             </div>
           </div>
   
-          <div class="w3-container w3-card w3-black w3-margin-bottom">
+          <div class="w3-container w3-card w3-black">
             <h2 class="w3-text-orange w3-padding-16">
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-deep-orange"></i>Educação
             </h2>
@@ -126,16 +126,19 @@
               <h5 class="w3-text-orange"><b>Faculdade VINCIT</b></h5>
               <h6 class="w3-text-deep-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2022 - <span class="w3-tag w3-deep-orange w3-text-white w3-round">ATUAL</span></h6>
               <p> Pós-graduação Lato Sensu no curso de Full Stack Java Developer, com foco em Java e Spring Boot para back-end, e Javascript, HTML, CSS e Angular para front-end, além de Flutter para aplicativos mobile e conhecimento em Github, Docker, Cloud Computing entre outros</p>
+              <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-text-orange"><b>Faculdade de Tecnologia SENAI</b></h5>
               <h6 class="w3-text-deep-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2015 - <span class="w3-tag w3-deep-orange w3-text-white w3-round">Janeiro 2019</span></h6>
               <p>Curso Superior de Tecnologia em Automação Industrial com foco em eletrônica, programação, robótica entre outros</p>
+              <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-text-orange"><b>Unibratec</b></h5>
               <h6 class="w3-text-deep-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2007 - <span class="w3-tag w3-deep-orange w3-text-white w3-round">Dezembro 2009</span></h6>
               <p>Curso Técnico em Design Gráfico com foco em websites</p>
+              <hr>
             </div>
           </div>
 
@@ -169,7 +172,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-deep-orange w3-center w3-margin-top">
+    <footer class="w3-container w3-black w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/Pitonico" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/diogo-barbosa-2b240020a/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
