Atualização de projetos e pós

--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="" target="_blank">Formação (em andamento): Potência Tech Angular Developer - Powered by iFood</a></li>
+                <li><a href="https://www.dio.me/certificate/BA193A8D/share" target="_blank">Formação: Potência Tech Angular Developer - Powered by iFood</a></li>
                 <li><a href="https://www.dio.me/certificate/C885BC2D/share" target="_blank">Projeto: Construindo uma Pokédex com JavaScript</a></li>
-                <li><a href="https://www.dio.me/certificate/EACE56BE/share" target="_blank">Curso: Introdução ao Desenvolvimento Web com JavaScript
-                </a></li>
+                <li><a href="https://www.dio.me/certificate/6CB4397A/share" target="_blank">Projeto: Criando um Blog com Angular</a></li>
+                <li><a href="https://www.dio.me/certificate/790120D7/share" target="_blank">Projeto: Criando um Clone do BuzzFeed com Angular</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-text-orange"><b>Faculdade VINCIT</b></h5>
-              <h6 class="w3-text-deep-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2022 - <span class="w3-tag w3-deep-orange w3-text-white w3-round">ATUAL</span></h6>
+              <h6 class="w3-text-deep-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2022 - <span class="w3-tag w3-deep-orange w3-text-white w3-round">Maio - 2023</span></h6>
               <p> Pós-graduação Lato Sensu no curso de Full Stack Java Developer, com foco em Java e Spring Boot para back-end, e Javascript, HTML, CSS e Angular para front-end, além de Flutter para aplicativos mobile e conhecimento em Github, Docker, Cloud Computing entre outros</p>
               <hr>
             </div>
@@ -149,9 +149,9 @@
             <div class="w3-container">
               <h6 class="w3-text-deep-orange">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/Pitonico/js-developer-pokedex" target="_blank">Pitonico/js-developer-pokedex</a>
+                <a href="https://github.com/Pitonico/angular-tweet-clone" target="_blank">Pitonico/angular-tweet-clone</a>
               </h6>
-              <p>Desafio de Projeto DIO front-end utilizando HTML, CSS e javascript puro, com a criação de uma pokédex com informações detalhadas sobre os pokémons</p>
+              <p>Desafio de Projeto DIO front-end utilizando Angular, com a criação de uma area de texto para envio de mensagem estilo Twitter</p>
               <hr>
             </div>
             <!-- <div class="w3-container">
