--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
               </p>
               <ul>
                 <li><a href="https://www.dio.me/certificate/BA193A8D/share" target="_blank">Formação: Potência Tech Angular Developer - Powered by iFood</a></li>
+                <li><a href="https://www.dio.me/certificate/0F4A966A/share" target="_blank">Formação: Angular Developer</a></li>
                 <li><a href="https://www.dio.me/certificate/C885BC2D/share" target="_blank">Projeto: Construindo uma Pokédex com JavaScript</a></li>
                 <li><a href="https://www.dio.me/certificate/6CB4397A/share" target="_blank">Projeto: Criando um Blog com Angular</a></li>
                 <li><a href="https://www.dio.me/certificate/790120D7/share" target="_blank">Projeto: Criando um Clone do BuzzFeed com Angular</a></li>
+                <li><a href="https://www.dio.me/certificate/B37F8289/share" target="_blank">Projeto: Recriando Playstation Store</a></li>
               </ul>
               <hr>
             </div>
